--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Welcome To Local Bazar</title>
 	<meta name="description" content="local bazar portal" />
 	<meta name="keywords" content=" " />
-	<meta name="author" content="sumit" />
+	<meta name="author" content="Vipul Maan" />
 	
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
