--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" type="text/css" href="abc.css" />
 </head>
 <body>
-	
+	<!-- Start of body -->
 	<!-- Bottom bar with filter and cart info -->
 	<div class="bar">
 		<div class="filter">
