--- a/descrip.html
+++ b/descrip.html
@@ -20,7 +20,7 @@
     <h1>Registration form <small>For Shopkeepers only</small></h1>
 </div>
 
-<!-- Registration form - START -->
+<!-- Registration form - START ----->
 <div class="container">
     <div class="row">
         <form role="form">
